pgadmin/deployment_from_secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  selector:
   matchLabels:
    app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:

        - name: pgadmin4
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
              name: pgadminport
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pgadmin
#   labels:
#     app: pgadmin
# spec:
#   selector:
#    app: pgadmin
#   type: NodePort
#   ports:
#    - port: 80
#      nodePort: 30200

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nginx
  rules:
  - host: "pgadmin.com"
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
