pgadmin/deployment_from_vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  annotations:
    vault.hashicorp.com/agent-cache-enable: "true"
spec:
  selector:
   matchLabels:
    app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      serviceAccountName: webapp-sa
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4
          volumeMounts:
           - name: secrets-store-inline
             mountPath: "/mnt/secrets-store"
             readOnly: true
          ports:
            - containerPort: 80
              name: pgadminport
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "vault-database"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pgadmin
#   labels:
#     app: pgadmin
# spec:
#   selector:
#    app: pgadmin
#   type: NodePort
#   ports:
#    - port: 80
#      nodePort: 30200

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nginx
  rules:
  - host: "pgadmin.com"
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
